--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "migrate": "node -r dotenv/config src/migrate.js",
+    "migrate": "node -r dotenv/config migrate.js",
     "dev": "nodemon -r dotenv/config src/server.js",
     "start": "node -r dotenv/config src/server.js"
   },
